--- a/index.html
+++ b/index.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
-</head>
-<body>
-    <h1>Project Starter</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Rotating Navigation</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>Nathan Sanford</small>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+          voluptates deserunt distinctio dolorem dolorum voluptate nisi
+          repellat. Quos nihil voluptatum eius voluptatem fuga, enim nostrum
+          aperiam et officiis itaque recusandae, sunt fugit dignissimos ut nemo
+          ratione officia fugiat dolorem. Explicabo est modi quos ad, maxime
+          ullam vero tempore? Dolorem iure, architecto voluptate nam
+          reprehenderit aliquid omnis molestiae vel aspernatur, impedit tempore
+          similique fugiat nisi, eos rem asperiores. Adipisci sequi iure earum
+          iusto modi accusamus repudiandae magni, asperiores est quo fugit nam
+          inventore eius! Voluptatem quos officia laboriosam sapiente quasi,
+          totam omnis corrupti enim velit ipsum maxime! Eaque nobis optio nisi.
+        </p>
+
+        <h3>My Dog</h3>
+        <img
+          src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80"
+          alt="doggy"
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad eum vero
+          sed deleniti sapiente. Consectetur necessitatibus nam laudantium
+          fugiat minus. Nam, quod iusto ea maxime reprehenderit ullam delectus
+          dolor assumenda reiciendis voluptates, ipsum eveniet natus praesentium
+          quisquam a voluptas autem! Dolorum vitae qui voluptate deserunt fugit,
+          numquam dolores assumenda beatae pariatur a asperiores commodi alias
+          consequuntur sint saepe ab rem? Quaerat incidunt labore odio facere ut
+          ducimus aut omnis, distinctio sed laboriosam laudantium eveniet
+          veniam?
+        </p>
+      </div>
+    </div>
+
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i> Home</li>
+            <li><i class="fas fa-user-alt"></i> About</li>
+            <li><i class="fas fa-envelope"></i> Contact</li>
+        </ul>
+    </nav>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
